--- a/layouts/partials/sections/v3/achievements.html
+++ b/layouts/partials/sections/v3/achievements.html
@@ -8,12 +8,24 @@
       {{ if .img }}
       {{ $img = .img }}
       {{ end }}
+
       <div class="col-md-5 achiv-out px-4 px-md-2 my-2" data-aos="fade-up" data-aos-easing="linear"
         data-aos-duration="600" data-aos-once="true">
         <div class="achiv-card d-flex align-items-end shadow-lg rounded" style="background-image: url(./{{ .img }});">
           <div class="p-3 w-100 achiv overflow-hidden">
             <h4 class="text-center achiv-head">{{ .title }}</h4>
             <div class="text-secondary">{{ .description }}</div>
+            <span class="float-right">
+              {{ if .featuredlink }}
+              <a href="{{ .featuredlink }}" class="px-1">
+                <i class="fas text-info fa-link"></i>
+              </a>
+              {{ end }} {{ if .githublink }}
+              <a href="{{ .githublink }}" class="px-1 pr-2">
+                <i class="fab text-dark fa-lg fa-github pro-github"></i>
+              </a>
+              {{ end }}
+            </span>
           </div>
         </div>
       </div>
